# Crabby-Notepad

./: .gitignore  Cargo.toml  README.md  Settings.toml
src/: app.rs  config.rs  main.rs  path.rs
src/app/: file_list.rs
src/gui/: mod.rs  window.rs
