[package]
name = "crabby-notepad"
version = "0.1.3"
edition = "2021"

[dependencies]
windows = { version = "0.*", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
] }

toml = "0.8.19"
serde = { version = "1.0", features = ["derive"] }