[package]
name = "crabby-notepad"
version = "0.1.4"
edition = "2021"


[dependencies]
lazy_static = "1.5.0"
toml = "0.8.19"
serde = { version = "1.0", features = ["derive"] }
winit = "0.30.5"
log = "0.4.22"
env_logger = "0.11.5"
dotenvy = "0.15.7"
egui = "0.29.1"
eframe = "0.29.1"
egui-winit = "0.29.1"
directories = "5.0.1"
once_cell = "1.20.2"
